yaml/app/deployment-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:   
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true         
      containers:
      - name: local-mongodb
        image: mongo:6.0.3
        ports:
        - containerPort: 27017
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts: 
          - mountPath: /data/db
            name: mongodb-vol
      volumes:
        - name: mongodb-vol
          emptyDir: {}
      
        # livenessProbe:          
        #   initialDelaySeconds: 1
        #   periodSeconds: 1
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 6
        # readinessProbe:          
        #   initialDelaySeconds: 1
        #   periodSeconds: 1
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 6
