yaml/app/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: app
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
